[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Player" type="Area2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 432, 128, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 0 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -16, 0 )

[node name="RayCastUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -16 )
collision_mask = 9

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )

[node name="MoveTween" type="Tween" parent="."]

[node name="IdleTween" type="Tween" parent="."]

[node name="HeldItem" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
offset = Vector2( 0, -16 )
region_enabled = true
[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]
